reupload sushi website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mirai Sushi</title>
+    <link rel="stylesheet" href="./main.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="nav">
+      <div id="nav" class="nav">        
+      <a class="nav-content" rel="noopener noreferrer" href="index.html#about"
+      >Über uns</a>
+    <a class="nav-content" href="menu.html">Speise<wbr />karte</a>
+    <a class="nav-content" href="index.html#info-timespan"
+      >Öffnungs<wbr />zeiten</a>
+      </div>     
+    </section>
+    <section id="hero" class="hero">
+      <h1 class="title">Mirai </br> Sushi</h1>
+      <p class="japan-subtitle">いただきます</p>
+      <p class="subtitle">itadakimasu</p>      
+      <p class="translation-subtitle-de"><em>(guten Appetit)</em></p>
+      <a class="hero-call-to-action button-opacy-high" href="#info-timespan">Öffnungszeiten ansehen</a>
+    </section>
+    <section class="about">
+      <div class="about-container">
+      <h2 id="about" class="about-title">Über uns</h2>      
+      <p class="about-lorem">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta recusandae, animi alias omnis iusto error nisi eligendi ipsa voluptatem velit ipsum reiciendis, odio reprehenderit nesciunt consequatur neque, nihil incidunt voluptatibus?
+        Alias corrupti quasi ab nulla inventore. 
+      </br> </br>
+        Aliquid voluptate harum numquam rem blanditiis nulla
+        vel sed vero, illo veritatis expedita laborum, fugiat fuga corporis
+        praesentium iusto accusantium omnis cupiditate?
+      </p>
+        <a href="menu.html" class="about-call-to-action button-opacy-high">Zur Speisekarte</a>
+    </div>
+      <div class="div-about-img">        
+        <img src="./images-china/Jp-Eingang.jpg" alt="Eingang Mirai-Restaurant" class="about-img about-img-big">      
+        <div class="about-img-tiny">
+        <img src="./images-china/Jp-about.jpg" alt="Innenbereich einer Pizzeria" class="about-img">
+        <img src="./images-china/Eingang-Restaurant.jpg" alt="Pizza Salami" class="about-img">
+      </div>
+      </div>
+    </section>
+    <section id="info-timespan" class="timespan">     
+        <h2 class="timespan-header header">Öffnungszeiten</h2>
+        <div class="timespan-content">
+          <p class="timespan-day">
+            <span class="day">Mo.</span>
+            <span class="hour">Ruhetag</span>
+          </p>
+          <p class="timespan-day">
+            <span class="day">Di.</span>
+            <span class="hour">11:00 - 22:00 Uhr</span>
+          </p>
+          <p class="timespan-day">
+            <span class="day">Mi.</span>
+            <span class="hour">11:00 - 22:00 Uhr</span>
+          </p>
+          <p class="timespan-day">
+            <span class="day">Do.</span>
+            <span class="hour">11:00 - 22:00 Uhr</span>
+          </p>
+          <p class="timespan-day">
+            <span class="day">Fr.</span>
+            <span class="hour">11:00 - 22:00 Uhr</span>
+          </p>
+          <p class="timespan-day">
+            <span class="day">Sa.</span>
+            <span class="hour">11:00 - 22:00 Uhr</span>
+          </p>
+          <p class="timespan-day">
+            <span class="day">So.</span>
+            <span class="hour">11:00 - 22:00 Uhr</span>
+          </p>
+        </div> 
+    </section>
+    <section class="contact">          
+        <img src="./images-china/Jp-timespan1.jpg" alt="Gruppe von Menschen, die jublen" class="contact-img">
+      <div class="contact-details">
+      <h2 id="contact" class="contact-header header">Kontakt</h2>
+      <p class="contact-detail">(0) 123 4567890</p>
+      <p class="contact-detail">info@mustermann.de</p>
+      <p class="contact-detail">Musterstr. 2</p>
+      <p class="contact-detail">1337 Musterdorf</p>
+      <a href="" class="contact-call-to-action button-opacy-high">Jetzt anrufen!</a>
+      <a href="" class="contact-call-to-action button-opacy-low">Email schreiben</a>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="footer-links">
+        <a class="footer-content" rel="noopener noreferrer" href="Impressum.html" >Impressum</a>
+        <a class="footer-content" href="">Datenschutz<wbr/>erklärung</a>
+        <a class="footer-content" href="">Jobs</a>
+      </div>
+      <div class="footer-copyright">
+        <p class="copyright-content">© 2023 DayvieJones</p>
+      </div>      
+    </section>
+  </body>
 </html>
