fix: impressum nav content; picture path

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <a href="menu.html" class="about-call-to-action button-opacy-high">Zur Speisekarte</a>
     </div>
       <div class="div-about-img">        
-        <img src="./images-china/Jp-Eingang.jpg" alt="Eingang Mirai-Restaurant" class="about-img about-img-big">      
+        <img src="./public/Jp-Eingang.jpg" alt="Eingang Mirai-Restaurant" class="about-img about-img-big">      
         <div class="about-img-tiny">
-        <img src="./images-china/Jp-about.jpg" alt="Innenbereich einer Pizzeria" class="about-img">
-        <img src="./images-china/Eingang-Restaurant.jpg" alt="Pizza Salami" class="about-img">
+        <img src="./public/Jp-about.jpg" alt="Innenbereich einer Pizzeria" class="about-img">
+        <img src="./public/Eingang-Restaurant.jpg" alt="Pizza Salami" class="about-img">
       </div>
       </div>
     </section>
@@ -78,7 +78,7 @@
         </div> 
     </section>
     <section class="contact">          
-        <img src="./images-china/Jp-timespan1.jpg" alt="Gruppe von Menschen, die jublen" class="contact-img">
+        <img src="./public/Jp-timespan1.jpg" alt="Koch bereitet Sushi zu" class="contact-img">
       <div class="contact-details">
       <h2 id="contact" class="contact-header header">Kontakt</h2>
       <p class="contact-detail">(0) 123 4567890</p>
